[metadata]
name = cache-by-key
version = 0.0.1
description = cache-by-key is a lru based cache that allows you to cache by specific keyword argument from a decorated function.
long_description = file: README.md
url = https://github.com/Rashik-raj/cache-by-key
author = Rashikraj Shrestha
author_email = rashik123.rs@gmail.com
classifiers =
    Environment :: Python
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
python_requires = >=3.8